--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
     </a>
 
 </center>
+<h3>
+    Click Here To Download GTA V Nfs Speedometer ⬇️⬇️
+</h3>
+
+<center>
+    <a href="https://www.mediafire.com/file/7bke230y7e62i9s/3daeed-NSFgauge-2.63.2.rar/file" download='image' class="download-btn">Download
+        <i class="fa fa-download"></i>
+    </a>
+
+</center>
+
 <p>Note : The Web Is Currently In Development So Any Problems 
     Please Contact </p>
     Contact : suryakarthi908058@gmail.com
@@ -46,4 +57,3 @@
 </CENTER>
 </body>
 </html>
-
