--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <head>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "n8cjml6y1q");
+    </script>
 <title>GTA V MODS </title>
 <link rel="icon" href="images.jpg">
 <meta charset="UTF-8">
@@ -35,6 +42,8 @@
     </a>
 
 </center>
+
+
 <h3>
     Click Here To Download GTA V Nfs Speedometer ⬇️⬇️
 </h3>
